# toolsmdp

./: .amlignore  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  LIGHTNING_SETUP.md  README.md  SETUP.md  ToolSMDP_Implementation_Plan_v3.md  ToolSMDP_Paper_Draft_v3.md  docker-compose.yml  milestones.md  pyproject.toml  results.md
.claude/: settings.local.json
.devcontainer/: TODO.md  devcontainer.json
analysis/: pre_training_characterization.py  step_2_2_analysis.md
core/: code_block_detector.py  context_block_detector.py  replacement.py  reward.py  segment_rollout.py
data/: download_and_format.py
data_local/eval_splits/: 2wiki_dev_50.jsonl  2wiki_dev_500.jsonl  finqa_test_50.jsonl  finqa_test_500.jsonl  gsm8k_test_50.jsonl  gsm8k_test_500.jsonl  hotpotqa_dev_50.jsonl  hotpotqa_dev_500.jsonl  musique_dev_50.jsonl  musique_dev_500.jsonl
data_local/processed/: finqa_train_50.jsonl  gsm8k_train_50.jsonl
data_local/retrieval/: bm25_index.pkl  corpus.jsonl
retrieval/: search.py
sandbox/: executor.py
scripts/: interactive.py  lightning_setup.sh  test_base_model.py  try_search.py
tests/: test_code_block_detector.py  test_context_block_detector.py  test_executor.py  test_replacement.py  test_reward.py  test_search.py
