[project]
name = "toolsmdp"
version = "0.1.0"
description = "Segment-level RL for LLM tool use via the SMDP framework"
requires-python = ">=3.10"
dependencies = [
    "datasets",
    "transformers>=4.51",
    "tokenizers",
    "pandas",
    "jsonlines",
    "tqdm",
    "numpy",
]

[project.optional-dependencies]
train = [
    "torch",
    "accelerate",
    "vllm",
    "wandb",
    "pyserini",
    "faiss-cpu",
]
dev = [
    "pytest",
    "pytest-timeout",
]

[tool.setuptools.packages.find]
include = ["core*", "sandbox*", "data*", "retrieval*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
